<resources>
    <string name="app_name">爱丽丝语词典</string>
</resources>

