...
            OutlinedTextField(
                value = text,
                onValueChange = onTextChanged,
                modifier = Modifier
                    .fillMaxWidth()
                    .height(250.dp),
                label = { Text("爱丽丝语文本") },
                placeholder = { Text("输入或导入文本；停顿片刻后自动检查…") },
                textStyle = MaterialTheme.typography.bodyLarge.copy(fontFamily = alicianFont),
                visualTransformation = highlightTransformation,
            )
        }
        item {
...
